some folder restructuring and chunk gen work